# api-actix-diesel-template

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  docker-compose.yml
docs/: commands.md
migrations/2024-06-07-184955_cash_in/: down.sql  up.sql
migrations/2024-06-07-185002_cash_out/: down.sql  up.sql
src/: app.rs  container.rs  lib.rs  main.rs  schema.rs
src/api/controllers/: cash_in_handler.rs  cash_out_handler.rs  mod.rs
src/api/dto/: cash_in.rs  cash_out.rs
src/api/routes/: cash_in_routes.rs  cash_out_routes.rs  mod.rs
src/domain/: mod.rs
src/domain/models/: cash_in.rs  cash_out.rs
src/domain/repositories/: cash_in.rs  cash_out.rs
src/domain/services/: cash_in.rs  cash_out.rs
src/infrastructure/databases/: postgresql.rs
src/infrastructure/models/: cash_in.rs  cash_out.rs
src/infrastructure/repositories/: cash_in.rs  cash_in_repository.rs  cash_out.rs  mod.rs
src/services/: cash_in.rs  cash_out.rs  mod.rs
src/services/cash_flow/: cash_in_service.rs  mod.rs
src/tests/api/: mod.rs  test_cash_in_controller.rs
