[package]
name = "actix_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-threadpool = "0.3.3"
actix-web = "4"
async-trait = "0.1.80"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
testcontainers = { version = "0.14.0" }
